--- a/Task-Manager/App.config
+++ b/Task-Manager/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+
+ <connectionStrings>
+ <add name="MyConnection" connectionString= "TestDB111.db"/>
+    </connectionStrings>
+
 </configuration>
